--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,5 @@
+= Version 0.1.6
+* Fix for fantom login failed attemp
 = Version 0.1.5
 * More fixes for gem dependencies (still learning ;) )
 = Version 0.1.4
