--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,5 @@
+= Version 0.2.2
+* Fix for "html" FB login redirect (not header redirect)
 = Version 0.2.1
 * Rails generators to create DB tables
 = Version 0.1.8
