--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,5 @@
+= Version 0.2.3
+* Fix for account_error - will clear cookie after error raise - so wiil try to relogin with next attempt (will not use corrupted cookie again)
 = Version 0.2.2
 * Fix for "html" FB login redirect (not header redirect)
 = Version 0.2.1
