--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,5 @@
+= Version 0.2.5
+* Removed errors login. Reraising different errors than FacebookBot::LoginFailed so will log automatically. Inserted all cookie_jar operations into begin-rescue blocks because it sometimes raises 'undefined method expired? 4 nil class'
 = Version 0.2.4
 * Experimental Rails errors loggin
 = Version 0.2.3
