--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,5 @@
+= Version 0.2.7
+* Fixed tests and dependencies
 = Version 0.2.6
 * Fix for undefined each for nil class - when cookiejar is corrupted - will clear corrupted cookiejar - so in next request - will relogin
 = Version 0.2.5
